--- a/the_beginning.html
+++ b/the_beginning.html
@@ -11,3 +11,24 @@
     <p>Test 2</p>
 </body>
 </html>
+
+<!--
+Lab3 reference
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Art Gallery Viewer</title>
+</head>
+<body>
+    <header>
+        <img src="images/gallery-header.jpg" alt="logo"/>
+    </header>
+   <main>
+    <a href="gallery1.html"><img src="images/gallery1.png"><a href="gallery2.html"><img src="images/gallery2.png"></a><a href="gallery3.html"><img src="images/gallery3.png"></a><a href="gallery4.html"><img src="images/gallery4.png"></a><a href="gallery5.html"><img src="images/gallery5.png"></a><a href="gallery6.html"><img src="images/gallery6.png"></a>
+   </main> 
+</body>
+</html>
+-->
