--- a/the_beginning.html
+++ b/the_beginning.html
@@ -7,9 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Test 1</p>
-    <p>Test 2</p>
-    <p>Test 3</p>
+    <form>
+        <input type="text" name="username" placeholder="username">
+        <br>
+        <input type="email" name="email" placeholder="email">
+        <div>
+            <input type="password" name="password" placeholder="password">
+        </div>
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
 
