game title and intro

--- a/the_beginning.html
+++ b/the_beginning.html
@@ -7,15 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
-        <input type="text" name="username" placeholder="username">
-        <br>
-        <input type="email" name="email" placeholder="email">
-        <div>
-            <input type="password" name="password" placeholder="password">
-        </div>
-        <button type="submit">Submit</button>
-    </form>
+    <h1>Game Title Name</h1>
+    <p>“Your search for treasure leads you to ancient ruins filled with
+        pure elemental energy. You feel a connection to this energy, and realize 
+        that you are able to harness it. Use the power of the four elements of nature 
+        to overcome obstacles within these ruins, and reach the treasure!”</p>
 </body>
 </html>
 
