--- a/the_beginning.html
+++ b/the_beginning.html
@@ -13,6 +13,7 @@
         pure elemental energy. You feel a connection to this energy, and realize 
         that you are able to harness it. Use the power of the four elements of nature 
         to overcome obstacles within these ruins, and reach the treasure!”</p>
+        <h1>Meagan is the best person in the whole wide world ;)/h1>
 </body>
 </html>
 
