--- a/the_beginning.html
+++ b/the_beginning.html
@@ -13,6 +13,8 @@
         pure elemental energy. You feel a connection to this energy, and realize 
         that you are able to harness it. Use the power of the four elements of nature 
         to overcome obstacles within these ruins, and reach the treasure!”</p>
+    <h2>About</h2>
+    <p>This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina</p>
 </body>
 </html>
 
