--- a/the_beginning.html
+++ b/the_beginning.html
@@ -8,14 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Game Title Name</h1>
+    <h1>Elemental Run</h1>
     <p>“Your search for treasure leads you to ancient ruins filled with
         pure elemental energy. You feel a connection to this energy, and realize 
         that you are able to harness it. Use the power of the four elements of nature 
         to overcome obstacles within these ruins, and reach the treasure!”</p>
     <h2>About</h2>
-    <p>This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina</p>
-        <h1>Meagan is the best person in the whole wide world </h1>
+    <p>This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina 
+        created a game based on a version of Waterboy and Lavagirl we all played when we were younger 
+        and enjoyed so much as kids.
+    </p>
+    <h2>Instructions</h2>
+    <p>How to play the game:</p>
+    <footer><p>Contact info: batistar2@wit.edu, haradonm@wit.edu, nguyent26@wit.edu, ahmeds10@wit.edu</p></footer>
 </body>
 </html>
 
