--- a/the_beginning.html
+++ b/the_beginning.html
@@ -16,8 +16,7 @@
     <h2>About</h2>
     <p>This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina 
         created a game based on a version of Waterboy and Lavagirl we all played when we were younger 
-        and enjoyed so much as kids.
-    </p>
+        and enjoyed so much as kids.</p>
     <footer><p>Contact info: batistar2@wit.edu, haradonm@wit.edu, nguyent26@wit.edu, ahmeds10@wit.edu</p></footer>
 </body>
 </html>
