--- a/the_beginning.html
+++ b/the_beginning.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="Instructions"><a href="Tutorial"><a href="Game"></a>
     <h1>Elemental Run</h1>
     <p>“Your search for treasure leads you to ancient ruins filled with
         pure elemental energy. You feel a connection to this energy, and realize 
