--- a/Contact.html
+++ b/Contact.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <footer><p>Contact info: batistar2@wit.edu, haradonm@wit.edu, nguyent26@wit.edu, ahmeds10@wit.edu</p></footer>
+    <p>Contact info: batistar2@wit.edu, haradonm@wit.edu, nguyent26@wit.edu, ahmeds10@wit.edu</p>
 </body>
 </html>
+ insert our images 
