--- a/Home.html
+++ b/Home.html
@@ -8,11 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="Tutorial">Tutorial <a href="Game">Game <a href="About">About <a href="Contact">Contact</a>
+   <h2><a href="Tutorial" style="text-decoration: none">Tutorial </a> 
+    <a href="Game" style="text-decoration: none">Game </a>
+    <a href="About" style="text-decoration: none">About </a>
+    <a href="Contact" style="text-decoration: none">Contact</a></h2>
     <h1>Elemental Run</h1>
-    <p>“Your search for treasure leads you to ancient ruins filled with
+    <p1>“Your search for treasure leads you to ancient ruins filled with
         pure elemental energy. You feel a connection to this energy, and realize 
         that you are able to harness it. Use the power of the four elements of nature 
-        to overcome obstacles within these ruins, and reach the treasure!”</p>
+        to overcome obstacles within these ruins, and reach the treasure!”</p1>
 </body>
 </html>
