--- a/Home.html
+++ b/Home.html
@@ -8,10 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-   <h2><a href="Tutorial" style="text-decoration: none">Tutorial </a> 
-    <a href="Game" style="text-decoration: none">Game </a>
-    <a href="About" style="text-decoration: none">About </a>
-    <a href="Contact" style="text-decoration: none">Contact</a></h2>
+   <h2><a href="Tutorial.html" style="text-decoration: none">Tutorial </a> 
+    <a href="Game.html" style="text-decoration: none">Game </a>
+    <a href="About.html" style="text-decoration: none">About </a>
+    <a href="Contact.html" style="text-decoration: none">Contact</a></h2>
     <h1>Elemental Run</h1>
     <p1>“Your search for treasure leads you to ancient ruins filled with
         pure elemental energy. You feel a connection to this energy, and realize 
