--- a/Home.html
+++ b/Home.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="homestyles.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-   <h2><a href="Tutorial.html" style="text-decoration: none">Tutorial </a> 
-    <a href="Game.html" style="text-decoration: none">Game </a>
-    <a href="About.html" style="text-decoration: none">About </a>
-    <a href="Contact.html" style="text-decoration: none">Contact</a></h2>
-    <h1>Elemental Run</h1>
-    <p1>“Your search for treasure leads you to ancient ruins filled with
-        pure elemental energy. You feel a connection to this energy, and realize 
-        that you are able to harness it. Use the power of the four elements of nature 
-        to overcome obstacles within these ruins, and reach the treasure!”</p1>
-</body>
+	<head>
+		<link rel="stylesheet" href="./style/homestyles.css" />
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+
+	<body>
+		<nav class="navbar">
+			<!-- LOGO -->
+			<div class="logo">EL3MEN7O</div>
+			<!-- NAVIGATION MENU -->
+			<ul class="nav-links">
+				<!-- NAVIGATION MENUS -->
+				<div class="menu">
+					<li><a href="/">Home</a></li>
+					<li><a href="/">About</a></li>
+					<li><a href="/">Pricing</a></li>
+					<li><a href="/">Contact</a></li>
+				</div>
+			</ul>
+		</nav>
+
+		<h1>Elemental Run</h1>
+		<p1
+			>“Your search for treasure leads you to ancient ruins filled with pure elemental energy. You feel a connection to this energy, and realize that you are able to harness it. Use the power of the
+			four elements of nature to overcome obstacles within these ruins, and reach the treasure!”</p1
+		>
+	</body>
 </html>
