--- a/Contact.html
+++ b/Contact.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>Contact info: batistar2@wit.edu, haradonm@wit.edu, nguyent26@wit.edu, ahmeds10@wit.edu</p>
-</body>
+	<head>
+      <link rel="stylesheet" href="./style/homeStyles.css" />
+		<link rel="stylesheet" href="./style/navbarStyles.css" />
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<header id="navbar">
+			<nav class="navbar-container container">
+				<a href="./Home.html" class="home-link">
+					<div class="navbar-logo"></div>
+					ELEMENTO
+				</a>
+				<div id="navbar-menu" aria-labelledby="navbar-toggle">
+					<ul class="navbar-links">
+						<li class="navbar-item"><a class="navbar-link" href="./Game.html">Game</a></li>
+						<li class="navbar-item"><a class="navbar-link" href="./Tutorial.html">Tutorial</a></li>
+						<li class="navbar-item"><a class="navbar-link" href="./Contact.html">Contact</a></li>
+						<li class="navbar-item"><a class="navbar-link" href="./About.html">About</a></li>
+					</ul>
+				</div>
+			</nav>
+		</header>
+		<p>Contact info: batistar2@wit.edu, haradonm@wit.edu, nguyent26@wit.edu, ahmeds10@wit.edu</p>
+      
+	</body>
 </html>
- insert our images 
+insert our images
