--- a/Home.html
+++ b/Home.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="./style/homestyles.css" />
+		<link rel="stylesheet" href="./style/homeStyles.css" />
+		<link rel="stylesheet" href="./style/navbarStyles.css" />
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,20 +10,22 @@
 	</head>
 
 	<body>
-		<nav class="navbar">
-			<!-- LOGO -->
-			<div class="logo">EL3MEN7O</div>
-			<!-- NAVIGATION MENU -->
-			<ul class="nav-links">
-				<!-- NAVIGATION MENUS -->
-				<div class="menu">
-					<li><a href="/">Home</a></li>
-					<li><a href="/">About</a></li>
-					<li><a href="/">Pricing</a></li>
-					<li><a href="/">Contact</a></li>
+		<header id="navbar">
+			<nav class="navbar-container container">
+				<a href="./Home.html" class="home-link">
+					<div class="navbar-logo"></div>
+					ELEMENTO
+				</a>
+				<div id="navbar-menu" aria-labelledby="navbar-toggle">
+					<ul class="navbar-links">
+						<li class="navbar-item"><a class="navbar-link" href="./Game.html">Game</a></li>
+						<li class="navbar-item"><a class="navbar-link" href="./Tutorial.html">Tutorial</a></li>
+						<li class="navbar-item"><a class="navbar-link" href="./Contact.html">Contact</a></li>
+						<li class="navbar-item"><a class="navbar-link" href="./About.html">About</a></li>
+					</ul>
 				</div>
-			</ul>
-		</nav>
+			</nav>
+		</header>
 
 		<h1>Elemental Run</h1>
 		<p1
