--- a/Game.html
+++ b/Game.html
@@ -13,7 +13,7 @@
 		<header id="navbar">
 			<nav class="navbar-container container">
 				<a href="./Home.html" class="home-link">
-					<div class="navbar-logo"></div>
+					<div class="navbar-logo"><img class="logo-img" src="elemento-logo.png" /></div>
 					ELEMENTO
 				</a>
 				<div id="navbar-menu" aria-labelledby="navbar-toggle">
