these are the updated ones

--- a/About.html
+++ b/About.html
@@ -1,34 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<link rel="stylesheet" href="./style/homeStyles.css" />
-		<link rel="stylesheet" href="./style/navbarStyles.css" />
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-	</head>
-	<body>
-		<header id="navbar">
-			<nav class="navbar-container container">
-				<a href="./Home.html" class="home-link">
-					<div class="navbar-logo"><img class="logo-img" src="elemento-logo.png" /></div>
-					ELEMENTO
-				</a>
-				<div id="navbar-menu" aria-labelledby="navbar-toggle">
-					<ul class="navbar-links">
-						<li class="navbar-item"><a class="navbar-link" href="./Game.html">Game</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./Tutorial.html">Tutorial</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./Contact.html">Contact</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./About.html">About</a></li>
-					</ul>
-				</div>
-			</nav>
-		</header>
-		<h1 class="About">About</h1>
-		<p>
-			This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina created a game based on a version of Waterboy and Lavagirl we all played when we were younger
-			and enjoyed so much as kids.
-		</p>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About/Elemento</title>
+    <link rel="stylesheet" href="aboutstyles.css" />
+</head>
+<body>
+        <div class="header">
+            <h1>About Elemento</h1>
+        </div>
+        <p>This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina 
+        created a game based on a version of Waterboy and Lavagirl we all played when we were younger 
+        and enjoyed so much as kids. Many of us played on either </p>
+</body>
 </html>
