--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
 		</header>
 		<h1 class="About">About</h1>
 		<p>
-			This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina created a game based on a version of Waterboy and Lavagirl we all played when we were younger
+			This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina created a game based on a version of Fireboy and Watergirl we all played when we were younger
 			and enjoyed so much as kids.
 		</p>
 	</body>
