--- a/About.html
+++ b/About.html
@@ -11,8 +11,9 @@
         <div class="header">
             <h1>About Elemento</h1>
         </div>
+        <img src="images/randy.jpg" alt="picture goes here">
         <p>This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina 
         created a game based on a version of Waterboy and Lavagirl we all played when we were younger 
-        and enjoyed so much as kids. Many of us played on either </p>
+        and enjoyed so much as kids.  </p>
 </body>
 </html>
