--- a/About.html
+++ b/About.html
@@ -11,9 +11,12 @@
         <div class="header">
             <h1>About Elemento</h1>
         </div>
-        <img src="images/randy.jpg" alt="picture goes here">
+        <img src="images/logo.png" alt="picture goes here">
         <p>This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina 
         created a game based on a version of Waterboy and Lavagirl we all played when we were younger 
-        and enjoyed so much as kids.  </p>
+        and enjoyed so much as kids. This game was developed as we reminisced our youth staying home playing simple
+        video games that would give our home computers viruses. As well as playing gameboy games of shark boy and 
+        lava girl on the gameboy, however these games were complicated and a lot of reading for the young mind so 
+        the team wanted to make a game that was easy enough for people of all ages to play and succeed in. </p>
 </body>
 </html>
