Added files related to game

--- a/Home.html
+++ b/Home.html
@@ -27,7 +27,7 @@
 			</nav>
 		</header>
 
-		<h1>Elemental Run</h1>
+		<h1>ELEMENTO</h1>
 		<p1
 			>“Your search for treasure leads you to ancient ruins filled with pure elemental energy. You feel a connection to this energy, and realize that you are able to harness it. Use the power of the
 			four elements of nature to overcome obstacles within these ruins, and reach the treasure!”</p1
