--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>About</title>
 	</head>
 	<body>
 		<header id="navbar">
@@ -25,7 +25,7 @@
 				</div>
 			</nav>
 		</header>
-		<h1 class="About">About</h1>
+		<h1>About</h1>
 		<p>
 			This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina created a game based on a version of Fireboy and Watergirl we all played when we were younger
 			and enjoyed so much as kids.
