--- a/Tutorial.html
+++ b/Tutorial.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Tutorial</title>
 	</head>
 	<body>
 		<header id="navbar">
@@ -25,5 +25,6 @@
 				</div>
 			</nav>
 		</header>
+		<h1>Tutorial</h1>
 	</body>
 </html>
