--- a/About.html
+++ b/About.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="./style/homeStyles.css" />
 		<link rel="stylesheet" href="./style/navbarStyles.css" />
+		<link rel="stylesheet" href="aboutstyles.css" />
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,10 +26,16 @@
 				</div>
 			</nav>
 		</header>
-		<h1>About</h1>
-		<p>
-			This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina created a game based on a version of Fireboy and Watergirl we all played when we were younger
-			and enjoyed so much as kids.
-		</p>
-	</body>
+
+        <div class="header">
+            <h1>About Elemento</h1>
+        </div>
+        <img src="images/logo.png" alt="picture goes here">
+        <p>This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and Sabrina 
+        created a game based on a version of Waterboy and Lavagirl we all played when we were younger 
+        and enjoyed so much as kids. This game was developed as we reminisced our youth staying home playing simple
+        video games that would give our home computers viruses. As well as playing gameboy games of shark boy and 
+        lava girl on the gameboy, however these games were complicated and a lot of reading for the young mind so 
+        the team wanted to make a game that was easy enough for people of all ages to play and succeed in. </p>
+</body>
 </html>
