--- a/Tutorial.html
+++ b/Tutorial.html
@@ -26,5 +26,10 @@
 			</nav>
 		</header>
 		<h1>Tutorial</h1>
+			<p>Press the right arrow key to move right</p>
+			<p>Press the left arrow key to move left</p>
+			<p>Press the up arrow key to jump over obstacles</p>
+			<p>Avoid as many obstacles as you can to win the game. But be careful
+				about your heart status or else you start from the beginning!</p>
 	</body>
 </html>
