--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,10 @@
 		<h1>ELEMENTO</h1>
 		<p1
 			>“Your search for treasure leads you to ancient ruins filled with pure elemental energy. You feel a connection to this energy, and realize that you are able to harness it. Use the power of the
-			four elements of nature to overcome obstacles within these ruins, and reach the treasure!”</p1
-		>
+			four elements of nature to overcome obstacles within these ruins, and reach the treasure!”</p1>
+			<br>
+			<!--<img class="logo-img" src="elemento-logo.png" 
+				width="30"
+				height="30"/> -->
 	</body>
 </html>
