--- a/feedbackForm/Contact.html
+++ b/feedbackForm/Contact.html
@@ -25,9 +25,9 @@
 					</ul>
 				</div>
 			</nav>
-		</header>
+		 </header> 
 
-		<section class="background firstsection">
+	<!--	<section class="background firstsection">
             <div class="pic-main">
                 <div class="firstHalf">
                     <p class="text-big">About US</p>
@@ -107,5 +107,78 @@
         <p>By Wentworth Institute of Technology students: Randy Batista, Tiffany Phan, Sabrina Ahmed, and Meagan Haradon</p>
 
     </body>
+</html> -->
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Add Employee</h1>
+  <form action="/addResponse" method="POST">
+    <label for="empid">Employee ID:</label>
+    <input type="number" id="" name="empid" required>
+    <br>
+    <label for="empname">Employee Name:</label>
+    <input type="text" id="" name="empname" required>
+    <br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+    <br>
+    <button type="submit">Submit</button>
+  </form>
+
+  <h2>Employees</h2>
+  <table id="employees">
+    <thead>
+      <tr>
+        <th>Employee ID</th>
+        <th>Employee Name</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <script>
+    async function fetchEmployees() {
+      const response = await fetch('/employees');
+      const data = await response.json();
+      const employeesTable = document.getElementById('employees').getElementsByTagName('tbody')[0];
+      employeesTable.innerHTML = '';
+
+      data.forEach(employee => {
+        const newRow = employeesTable.insertRow();
+        newRow.innerHTML = `
+          <td>${employee.empid}</td>
+          <td>${employee.empname}</td>
+          <td>${employee.email}</td>
+        `;
+      });
+    }
+
+    fetchEmployees();
+  </script>
+</body>
+</html> -->
+
+
+<body>
+    <div class="feed">
+
+        
+        <form>
+            <div class="input">
+                <textarea id="message" rows="8"></textarea>
+                <label for="message">Your Feedback</label>
+                        
+            </div>
+            <button type="submit"> SUBMIT</button>
+        </form>
+    </div>
+</body>
 </html>
- <!-- insert our images  -->
