--- a/Game.html
+++ b/Game.html
@@ -1,34 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-       	<link rel="stylesheet" href="./style/homeStyles.css" />
+		<link rel="stylesheet" href="./style/homeStyles.css" />
 		<link rel="stylesheet" href="./style/navbarStyles.css" />
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="./style/gameStyles.css" />
+		<link rel="stylesheet" href="./index.css" />
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Game</title>
 	</head>
 	<script></script>
-	<body>
+	<body class="game-screen">
 		<header id="navbar">
 			<nav class="navbar-container container">
 				<a href="./Home.html" class="home-link">
-					<div class="navbar-logo"><img class="logo-img" src="elemento-logo.png" /></div>
-					ELEMENTO
+					<div class="navbar-logo"><img class="logo-img" src="./img/logo.png" /></div>
+					ELEMENT
+					<img src="./img/gif/Web_Dev_Fire_Run.gif" width="30" height="45" alt="This will display an animated GIF" />
 				</a>
 				<div id="navbar-menu" aria-labelledby="navbar-toggle">
 					<ul class="navbar-links">
-					<li class="navbar-item"><a class="navbar-link" href="./Game.html">Game</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./Tutorial.html">Tutorial</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./Contact.html">Contact</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./About.html">About</a></li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./Game.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								Game</a
+							>
+						</li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./Tutorial.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								Tutorial</a
+							>
+						</li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./Contact.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								Contact</a
+							>
+						</li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./About.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								About</a
+							>
+						</li>
 					</ul>
 				</div>
 			</nav>
 		</header>
 
-		<h1>Elemento</h1>
+		<h1 class="gametab-title">ELEMENTO</h1>
 		<canvas></canvas>
 		<!-- <script
 		src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"
@@ -36,13 +58,13 @@
 		crossorigin="anonymous"
 		referrerpolicy="no-referrer"
 		></script> -->
-		<script src="js/utils.js"></script>
-		<script src="js/data/collisions.js"></script>
-		<script src="js/classes/CollisionBlock.js"></script>
-		<script src="js/classes/Sprite.js"></script>
-		<script src="js/classes/Player.js"></script>
-		<script src="js/eventListeners.js"></script>
-		<script src="index.js"></script>
+		<script src="./js/utils.js"></script>
+		<script src="./js/data/collisions.js"></script>
+		<script src="./js/classes/CollisionBlock.js"></script>
+		<script src="./js/classes/Sprite.js"></script>
+		<script src="./js/classes/Player.js"></script>
+		<script src="./js/eventListeners.js"></script>
+		<script src="./index.js"></script>
 
 		<!-- <p>
 		Your search for treasure leads you to ancient ruins filled with
