--- a/Home.html
+++ b/Home.html
@@ -3,6 +3,8 @@
 	<head>
 		<link rel="stylesheet" href="./style/homeStyles.css" />
 		<link rel="stylesheet" href="./style/navbarStyles.css" />
+		<link rel="stylesheet" href="./style/gameButton.css" />
+		<link rel="stylesheet" href="./index.css" />
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,25 +15,54 @@
 		<header id="navbar">
 			<nav class="navbar-container container">
 				<a href="./Home.html" class="home-link">
-	<div class="navbar-logo"><img class="logo-img" src="elemento-logo.png" /></div>
-					ELEMENTO
+					<div class="navbar-logo"><img class="logo-img" src="./img/logo.png" /></div>
+					ELEMENT
+					<img src="./img/gif/Web_Dev_Fire_Run.gif" width="30" height="45" alt="This will display an animated GIF" />
 				</a>
 				<div id="navbar-menu" aria-labelledby="navbar-toggle">
 					<ul class="navbar-links">
-						<li class="navbar-item"><a class="navbar-link" href="./Game.html">Game</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./Tutorial.html">Tutorial</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./Contact.html">Contact</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./About.html">About</a></li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./Game.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								Game</a
+							>
+						</li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./Tutorial.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								Tutorial</a
+							>
+						</li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./Contact.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								Contact</a
+							>
+						</li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./About.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								About</a
+							>
+						</li>
 					</ul>
 				</div>
 			</nav>
 		</header>
+		<div class="box"></div>
+		<h1><span class="home-title-side1">ELEM</span><span class="home-title-side2">ENTO</span></h1>
+		<div class="dec-container">
 
-		<h1>ELEMENTO</h1>
-		<p1
-			>“Your search for treasure leads you to ancient ruins filled with pure elemental energy. You feel a connection to this energy, and realize that you are able to harness it. Use the power of the
-			four elements of nature to overcome obstacles within these ruins, and reach the treasure!”</p1>
-			<br>
-			<img class="logo-img" src="elemento-logo.png"/> 
+			<div class="home-description">
+				<p class="game-desc"></p>
+					“Your search for treasure leads you to ancient ruins filled with pure elemental energy. You feel a connection to this energy, and realize that you are able to harness it. Use the power of
+					the four elements of nature to overcome obstacles within these ruins, and reach the treasure!”
+				</p>
+			</div>
+			<div class="game-btn">
+				<button type="button" class="gameBtn" role="button" onclick="window.location.href='./Game.html';">Play Game</button>
+			</div>
+			<br />
+		</div>
 	</body>
 </html>
