--- a/Tutorial.html
+++ b/Tutorial.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="./style/homeStyles.css" />
 		<link rel="stylesheet" href="./style/navbarStyles.css" />
+		<link rel="stylesheet" href="./index.css" />
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,24 +13,44 @@
 		<header id="navbar">
 			<nav class="navbar-container container">
 				<a href="./Home.html" class="home-link">
-					<div class="navbar-logo"><img class="logo-img" src="elemento-logo.png" /></div>
-					ELEMENTO
+					<div class="navbar-logo"><img class="logo-img" src="./img/logo.png" /></div>
+					ELEMENT
+					<img src="./img/gif/Web_Dev_Fire_Run.gif" width="30" height="45" alt="This will display an animated GIF" />
 				</a>
 				<div id="navbar-menu" aria-labelledby="navbar-toggle">
 					<ul class="navbar-links">
-						<li class="navbar-item"><a class="navbar-link" href="./Game.html">Game</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./Tutorial.html">Tutorial</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./Contact.html">Contact</a></li>
-						<li class="navbar-item"><a class="navbar-link" href="./About.html">About</a></li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./Game.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								Game</a
+							>
+						</li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./Tutorial.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								Tutorial</a
+							>
+						</li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./Contact.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								Contact</a
+							>
+						</li>
+						<li class="navbar-item">
+							<a class="navbar-link" href="./About.html">
+								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
+								About</a
+							>
+						</li>
 					</ul>
 				</div>
 			</nav>
 		</header>
 		<h1>Tutorial</h1>
-			<p>Press the right arrow key to move right</p>
-			<p>Press the left arrow key to move left</p>
-			<p>Press the up arrow key to jump over obstacles</p>
-			<p>Avoid as many obstacles as you can to win the game. But be careful
-				about your heart status or else you start from the beginning!</p>
+		<p>Press the right arrow key to move right</p>
+		<p>Press the left arrow key to move left</p>
+		<p>Press the up arrow key to jump over obstacles</p>
+		<p>Avoid as many obstacles as you can to win the game. But be careful about your heart status or else you start from the beginning!</p>
 	</body>
 </html>
