--- a/About.html
+++ b/About.html
@@ -38,7 +38,7 @@
 						<a class="navbar-link" href="./Contact.html">
 							<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
 								alt="This will display an animated GIF" />
-							Contact</a>
+							Contact Info</a>
 					</li>
 					<li class="navbar-item">
 						<a class="navbar-link" href="./About.html">
