--- a/Home.html
+++ b/Home.html
@@ -21,12 +21,12 @@
 				</a>
 				<div id="navbar-menu" aria-labelledby="navbar-toggle">
 					<ul class="navbar-links">
-						<li class="navbar-item">
+						<!-- <li class="navbar-item">
 							<a class="navbar-link" href="./Game.html">
 								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
 								Game</a
 							>
-						</li>
+						</li> -->
 						<li class="navbar-item">
 							<a class="navbar-link" href="./Tutorial.html">
 								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
@@ -34,7 +34,7 @@
 							>
 						</li>
 						<li class="navbar-item">
-							<a class="navbar-link" href="./Contact.html">
+							<a class="navbar-link" href="./Feedback.html">
 								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
 								Contact</a
 							>
@@ -50,7 +50,7 @@
 			</nav>
 		</header>
 		<div class="box"></div>
-		<h1><span class="home-title-side1">ELEM</span><span class="home-title-side2">ENTO</span></h1>
+			<h1 class="title-home"><span class="home-title-side1">ELEM</span><span class="home-title-side2">ENTO</span></h1>
 		<div class="dec-container">
 
 			<div class="home-description">
@@ -60,7 +60,7 @@
 				</p>
 			</div>
 			<div class="game-btn">
-				<button type="button" class="gameBtn" role="button" onclick="window.location.href='./Game.html';">Play Game</button>
+				<button type="button" class="gameBtn1" role="button" onclick="window.location.href='./Game.html';">Play Game</button>
 			</div>
 			<br />
 		</div>
