--- a/About.html
+++ b/About.html
@@ -12,94 +12,92 @@
 	<title>About</title>
 </head>
 
-<body class="desc-logo">
-	<header id="navbar">
-		<nav class="navbar-container container">
-			<a href="./Home.html" class="home-link">
-				<div class="navbar-logo"><img class="logo-img" src="./img/logo.png" /></div>
-				ELEMENT
-				<img src="./img/gif/Web_Dev_Fire_Run.gif" width="30" height="45" alt="This will display an animated GIF" />
-			</a>
-			<div id="navbar-menu" aria-labelledby="navbar-toggle">
-				<ul class="navbar-links">
-					<li class="navbar-item">
+
+<header id="navbar">
+	<nav class="navbar-container container">
+		<a href="./Home.html" class="home-link">
+			<div class="navbar-logo"><img class="logo-img" src="./img/logo.png" /></div>
+			ELEMENT
+			<img src="./img/gif/Web_Dev_Fire_Run.gif" width="30" height="45" alt="This will display an animated GIF" />
+		</a>
+		<div id="navbar-menu" aria-labelledby="navbar-toggle">
+			<ul class="navbar-links">
+				<!-- <li class="navbar-item">
 						<a class="navbar-link" href="./Game.html">
 							<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
 								alt="This will display an animated GIF" />
 							Game</a>
-					</li>
-					<li class="navbar-item">
-						<a class="navbar-link" href="./Tutorial.html">
-							<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
-								alt="This will display an animated GIF" />
-							Tutorial</a>
-					</li>
-					<li class="navbar-item">
-						<a class="navbar-link" href="./Contact.html">
-							<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
-								alt="This will display an animated GIF" />
-							Contact</a>
-					</li>
-					<li class="navbar-item">
-						<a class="navbar-link" href="./About.html">
-							<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
-								alt="This will display an animated GIF" />
-							About</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</header>
-<div>
-<div class="about-box1"></div>
-	<div class="header">
-		<h1><span class="about-tile-side1">ABOUT E</span><span class="about-tile-side2">LEMENTO</span></h1>
-		<p class="about-desc">This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany and
-			Sabrina
-			created a game based on a version of Waterboy and Lavagirl we all played when we were younger
-			and enjoyed so much as kids. This game was developed as we reminisced our youth staying home playing simple
-			video games that would give our home computers viruses. As well as playing gameboy games of shark boy and
-			lava girl on the gameboy, however these games were complicated and a lot of reading for the young mind so
-			the team wanted to make a game that was easy enough for people of all ages to play and succeed in. </p>
+					</li> -->
+				<li class="navbar-item">
+					<a class="navbar-link" href="./Tutorial.html">
+						<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
+							alt="This will display an animated GIF" />
+						Tutorial</a>
+				</li>
+				<li class="navbar-item">
+					<a class="navbar-link" href="./Feedback.html">
+						<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
+							alt="This will display an animated GIF" />
+						Contact</a>
+				</li>
+				<li class="navbar-item">
+					<a class="navbar-link" href="./About.html">
+						<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
+							alt="This will display an animated GIF" />
+						About</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+</header>
+
+<body class="desc-logo" style="color: #fbeee0;">
+	<div class="desc-about-page-div">
+		<div class="about-box1"></div>
+		<div class="header">
+			<h1><span class="about-tile-side1">ABOUT E</span><span class="about-tile-side2">LEMENTO</span></h1>
+			<p class="about-desc">This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany
+				and
+				Sabrina
+				created a game based on a version of Waterboy and Lavagirl we all played when we were younger
+				and enjoyed so much as kids. This game was developed as we reminisced our youth staying home playing simple
+				video games that would give our home computers viruses. As well as playing gameboy games of shark boy and
+				lava girl on the gameboy, however these games were complicated and a lot of reading for the young mind so
+				the team wanted to make a game that was easy enough for people of all ages to play and succeed in. </p>
+		</div>
+
+		<div class="logo-desc">
+			<img src="./img/gif/Web_Dev_Jump_Fire.gif" class="logo-img-desc">
+		</div>
 	</div>
-	
-	<div class="logo-desc">
-		<img src="./img/gif/Web_Dev_Jump_Fire.gif" class="logo-img-desc">
+	<div class="">
+		<img src="./img/gif/floor.png" class="floor-img-desc">
 	</div>
-</div>
 
 	<div class="about-box2"></div>
 	<section class="background first-section">
-		<div class="pic-main">
-			<div class="firstHalf">
-				<p class="text-big">Contact Information</p>
+		<p class="text-big">Contact Information</p>
 
-				<p class="text-small">
-					Here you will get to know the team members of the development team for Elemento
-				</p>
-				<br>
-				<p class="center"><a href="#Order" style="text-decoration:none;color:white;">
-						Below are the people who are apart of the Development team</a>
-				</p>
-			</div>
-		</div>
+		<p class="text-small">
+			Here you will get to know the team members of the development team for Elemento
+		</p>
+		<br>
+		<h1 class="h-primary center" >
+			Our Team
+		</h1>
 	</section>
 
 	<section class="profile second-section">
-		<h1 class="h-primary center" style="margin-top:30px;text-align:center;">
-			Our Team
-		</h1>
-
+		<div class="about-box3"></div>
 		<div id="profiles">
-			<div class="about-box3"></div>
 			<div class="pic">
 				<img src="./img/contactInfo/discoRandy.png" alt="picture goes here">
 
 				<p class="center">
-					<a href="#randy" style="text-decoration:none;color:black;
+				<p style="text-decoration:none;
                         font-weight:bold;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
-						Randy Batista
-					</a>
+					Randy Batista
+				</p>
 				</p>
 				<p style="font-family: sans-serif">batistar2@wit.edu </p>
 			</div>
@@ -108,10 +106,10 @@
 				<img src="./img/contactInfo/dogTiffany.jpg" alt="picture goes here">
 
 				<p class="center">
-					<a href="#tiffany" style="text-decoration:none;color:black;
+				<p style="text-decoration:none;
                         font-weight:bold;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
-						Tiffany Phan
-					</a>
+					Tiffany Phan
+				</p>
 				</p>
 
 				<p style="font-family: sans-serif ">phant9@wit.edu </p>
@@ -121,10 +119,10 @@
 				<img src="./img/contactInfo/dogSandwich.jpg" alt="picture goes here">
 				<br>
 				<p class="center">
-					<a href="#sabrina" style="text-decoration:none;color:black;
+				<p style="text-decoration:none;
                         font-weight:bold;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
-						Sabrina Ahmed
-					</a>
+					Sabrina Ahmed
+				</p>
 				</p>
 				<p style="font-family: sans-serif ">ahmeds10@wit.edu </p>
 
@@ -134,10 +132,10 @@
 				<img src="./img/contactInfo/sittingUnicorn.jpg" alt="picture goes here">
 				<br>
 				<p class="center">
-					<a href="#meagan" style="text-decoration:none;color:black;
+				<p style="text-decoration:none;
                         font-weight:bold;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
-						Meagan Haradon
-					</a>
+					Meagan Haradon
+				</p>
 				</p>
 				<p style="font-family: sans-serif ">haradonm@wit.edu </p>
 
@@ -147,13 +145,14 @@
 	</section>
 
 	<footer class="background">
+		<div class="about-box8"></div>
 		<p class="text-footer">
-			Copyright Â©-All rights are reserved
+			Copyright Â©-All rights are reserved <br /> By Wentworth Institute of Technology students: Randy Batista,
+			Tiffany Phan, Sabrina Ahmed, and Meagan Haradon
 		</p>
-		<p>By Wentworth Institute of Technology students: Randy Batista, Tiffany Phan, Sabrina Ahmed, and Meagan Haradon
-		</p>
+
 	</footer>
-</body>
+
 </body>
 
 
