--- a/Tutorial.html
+++ b/Tutorial.html
@@ -19,12 +19,12 @@
 				</a>
 				<div id="navbar-menu" aria-labelledby="navbar-toggle">
 					<ul class="navbar-links">
-						<li class="navbar-item">
+						<!-- <li class="navbar-item">
 							<a class="navbar-link" href="./Game.html">
 								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
 								Game</a
 							>
-						</li>
+						</li> -->
 						<li class="navbar-item">
 							<a class="navbar-link" href="./Tutorial.html">
 								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
@@ -32,7 +32,7 @@
 							>
 						</li>
 						<li class="navbar-item">
-							<a class="navbar-link" href="./Contact.html">
+							<a class="navbar-link" href="./Feedback.html">
 								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
 								Contact</a
 							>
