--- a/Feedback.html
+++ b/Feedback.html
@@ -61,7 +61,7 @@
 						<td colspan="2">
 							<p>
 								<label >Email:</label><br />
-								<input type="email" name="email" placeholder="example@gmail.com" />
+								<input type="email" name="email" placeholder="Example@gmail.com" />
 							</p>
 							<p>
 								<label>Subject:</label><br />
