--- a/Tutorial.html
+++ b/Tutorial.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="./style/navbarStyles.css" />
 		<link rel="stylesheet" href="./index.css" />
 		<link rel="stylesheet" href="./index.css" />
+		<link rel="stylesheet" href="tutorial.css"/>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -53,9 +54,36 @@
 		<p>Press the left arrow key to move left</p>
 		<p>Press the up arrow key to jump over obstacles</p>
 		<p>Avoid as many obstacles as you can to win the game. But be careful about your heart status or else you start from the beginning!</p>
-		<p>Press the right arrow key to move right</p>
-		<p>Press the left arrow key to move left</p>
-		<p>Press the up arrow key to jump over obstacles</p>
-		<p>Avoid as many obstacles as you can to win the game. But be careful about your heart status or else you start from the beginning!</p>
+	</body>
+	
+	<body class="game-screen">
+		<canvas></canvas>
+		<!-- <script
+		src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"
+		integrity="sha512-Mf/xUqfWvDIr+1B6zfnIDIiG7XHzyP/guXUWgV6PgaQoIFeXkJQR5XWh9fqAiCiRCpemabt3naV4jhDWVnuYDQ=="
+		crossorigin="anonymous"
+		referrerpolicy="no-referrer"
+		></script> -->
+		<script src="./js/utils.js"></script>
+		<script src="./js/data/collisions.js"></script>
+		<script src="./js/classes/CollisionBlock.js"></script>
+		<script src="./js/classes/Sprite.js"></script>
+		<script src="./js/classes/Player.js"></script>
+		<script src="./js/eventListeners.js"></script>
+		<script src="./index.js"></script>
+		<script src="./js/utils.js"></script>
+		<script src="./js/data/collisions.js"></script>
+		<script src="./js/classes/CollisionBlock.js"></script>
+		<script src="./js/classes/Sprite.js"></script>
+		<script src="./js/classes/Player.js"></script>
+		<script src="./js/eventListeners.js"></script>
+		<script src="./index.js"></script>
+
+		<!-- <p>
+		Your search for treasure leads you to ancient ruins filled with
+			pure elemental energy. You feel a connection to this energy, and realize 
+			that you are able to harness it. Use the power of the four elements of nature 
+			to overcome obstacles within these ruins, and reach the treasure!
+		</p> -->
 	</body>
 </html>
