Button updated with tiffany's new Button Model

--- a/Home.html
+++ b/Home.html
@@ -62,7 +62,7 @@
 				</p>
 			</div>
 			<div class="game-btn">
-				<button type="button" class="gameBtn1" role="button" onclick="window.location.href='./Game.html';">Play Game</button>
+				<button type="button" class="gameBtn1" role="button" onclick="window.location.href='./Game.html';"></button>
 			</div>
 			<br />
 		</div>
