Back button added and dark play button updated

--- a/Game.html
+++ b/Game.html
@@ -113,7 +113,7 @@
 	</body>
 	<footer class="game-footer">
 		<div classes="go-back-btn">
-			<button type="button" class="gameBtn2" role="button" onclick="window.location.href='./Home.html';"><- Go Back</button>
+			<button type="button" class="gameBtn2" role="button" onclick="window.location.href='./Home.html';"></button>
 		</div>
 	</footer>
 </html>
