--- a/Feedback.html
+++ b/Feedback.html
@@ -55,7 +55,7 @@
 <body>
 	<div class="container">
 		<h1>Feedback Form</h1>
-		<form id="feedback-form" method="POST" action="./submit.php">
+		<form id="feedback-form" method="post" action="/submit.php">
 	<fieldset>
 		<legend>Contact Information</legend>
 		<div class="row">
