Home design update

--- a/Home.html
+++ b/Home.html
@@ -5,8 +5,6 @@
 		<link rel="stylesheet" href="./style/navbarStyles.css" />
 		<link rel="stylesheet" href="./style/gameButton.css" />
 		<link rel="stylesheet" href="./index.css" />
-		<link rel="stylesheet" href="./style/gameButton.css" />
-		<link rel="stylesheet" href="./index.css" />
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,52 +17,73 @@
 				<a href="./Home.html" class="home-link">
 					<div class="navbar-logo"><img class="logo-img" src="./img/logo.png" /></div>
 					ELEMENT
-					<img src="./img/gif/Web_Dev_Fire_Run.gif" width="30" height="45" alt="This will display an animated GIF" />
+					<img src="./img/gif/Fire_Run_Right.gif" alt="This will display an animated GIF" />
 				</a>
 				<div id="navbar-menu" aria-labelledby="navbar-toggle">
 					<ul class="navbar-links">
-						<!-- <li class="navbar-item">
-							<a class="navbar-link" href="./Game.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								Game</a
-							>
-						</li> -->
 						<li class="navbar-item">
-							<a class="navbar-link" href="./Tutorial.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								Tutorial</a
-							>
+							<a class="navbar-link" href="./About.html">
+								<img src="./img/gif/Heart.gif" alt="This will display an animated GIF" />
+								About
+							</a>
 						</li>
 						<li class="navbar-item">
 							<a class="navbar-link" href="./Feedback.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								Feedback</a
-							>
+								<img src="./img/gif/Heart.gif" alt="This will display an animated GIF" />
+								Feedback
+							</a>
 						</li>
 						<li class="navbar-item">
-							<a class="navbar-link" href="./About.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								About</a
-							>
+							<a class="navbar-link" href="./Tutorial.html">
+								<img src="./img/gif/Heart.gif" alt="This will display an animated GIF" />
+								Tutorial
+							</a>
 						</li>
 					</ul>
 				</div>
 			</nav>
 		</header>
-		<div class="box"></div>
-			<h1 class="title-home"><span class="home-title-side1">ELEM</span><span class="home-title-side2">ENTO</span></h1>
-		<div class="dec-container">
 
+		<img class="logo" src="./img/logo.png" />
+		<h1 class="title-home"><span class="home-title-side1">ELEM</span><span class="home-title-side2">ENTO</span></h1>
+		
+		<div class="logo-desc">
+			<img src="./img/gif/Fire_Idle_Right.gif" class="logo-img-desc">
+		</div>
+
+		<div class="floor">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
+		</div>
+
+		<div class="dec-container">
 			<div class="home-description">
-				<p class="game-desc"></p>
-					“Your search for treasure leads you to ancient ruins filled with pure elemental energy. You feel a connection to this energy, and realize that you are able to harness it. Use the power of
-					the four elements of nature to overcome obstacles within these ruins, and reach the treasure!”
+				<p class="game-desc">
+					Your search for treasure leads you to ancient ruins filled with pure elemental energy. You feel a 
+					connection to this energy, and realize that you are able to harness it. Use the power of the four 
+					elements of nature to overcome obstacles within these ruins, and reach the treasure!
 				</p>
 			</div>
+
 			<div class="game-btn">
 				<button type="button" class="gameBtn1" role="button" onclick="window.location.href='./Game.html';"></button>
 			</div>
 			<br />
 		</div>
+
+		<div class="floor">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
+		</div>
+
+		<footer class="background">
+			<p class="text-footer">
+				Copyright © All Rights are Reserved
+				<br/>
+				By Wentworth Institute of Technology students: Sabrina Ahmed, Tiffany Phan, Randy Batista, and Meagan Haradon
+			</p>
+		</footer>
 	</body>
 </html>
