About design update

--- a/About.html
+++ b/About.html
@@ -1,159 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<link rel="stylesheet" href="./style/homeStyles.css" />
+		<link rel="stylesheet" href="./style/navbarStyles.css" />
+		<link rel="stylesheet" href="./style/aboutStyles.css" />
+		<link rel="stylesheet" href="./index.css" />
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>About</title>
+	</head>
 
-<head>
-	<link rel="stylesheet" href="./style/homeStyles.css" />
-	<link rel="stylesheet" href="./style/navbarStyles.css" />
-	<link rel="stylesheet" href="./style/aboutStyles.css" />
-	<link rel="stylesheet" href="./index.css" />
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>About</title>
-</head>
 
+	<header id="navbar">
+		<nav class="navbar-container container">
+			<a href="./Home.html" class="home-link">
+				<div class="navbar-logo"><img class="logo-img" src="./img/logo.png" /></div>
+				ELEMENT
+				<img src="./img/gif/Water_Run_Right.gif" width="30" height="45" alt="This will display an animated GIF" />
+			</a>
+			<div id="navbar-menu" aria-labelledby="navbar-toggle">
+				<ul class="navbar-links">
+					<li class="navbar-item">
+						<a class="navbar-link" href="./About.html">
+							<img src="./img/gif/Heart.gif" alt="This will display an animated GIF" />
+							About
+						</a>
+					</li>
+					<li class="navbar-item">
+						<a class="navbar-link" href="./Feedback.html">
+							<img src="./img/gif/Heart.gif" alt="This will display an animated GIF" />
+							Feedback
+						</a>
+					</li>
+					<li class="navbar-item">
+						<a class="navbar-link" href="./Tutorial.html">
+							<img src="./img/gif/Heart.gif" alt="This will display an animated GIF" />
+							Tutorial
+						</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
 
-<header id="navbar">
-	<nav class="navbar-container container">
-		<a href="./Home.html" class="home-link">
-			<div class="navbar-logo"><img class="logo-img" src="./img/logo.png" /></div>
-			ELEMENT
-			<img src="./img/gif/Web_Dev_Fire_Run.gif" width="30" height="45" alt="This will display an animated GIF" />
-		</a>
-		<div id="navbar-menu" aria-labelledby="navbar-toggle">
-			<ul class="navbar-links">
-				<!-- <li class="navbar-item">
-						<a class="navbar-link" href="./Game.html">
-							<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
-								alt="This will display an animated GIF" />
-							Game</a>
-					</li> -->
-				<li class="navbar-item">
-					<a class="navbar-link" href="./Tutorial.html">
-						<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
-							alt="This will display an animated GIF" />
-						Tutorial</a>
-				</li>
-				<li class="navbar-item">
-					<a class="navbar-link" href="./Feedback.html">
-						<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
-							alt="This will display an animated GIF" />
-						Feedback</a>
-				</li>
-				<li class="navbar-item">
-					<a class="navbar-link" href="./About.html">
-						<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20"
-							alt="This will display an animated GIF" />
-						About</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
-</header>
-
-<body class="desc-logo" style="color: #fbeee0;">
-	<div class="desc-about-page-div">
-		<div class="about-box1"></div>
-		<div class="header">
-			<h1><span class="about-tile-side1">ABOUT E</span><span class="about-tile-side2">LEMENTO</span></h1>
-			<p class="about-desc">This game is for a Web Development Final Project in which members Randy, Meagan, Tiffany
-				and
-				Sabrina
-				created a game based on a version of Fireboy and Watergirl we all played when we were younger
-				and enjoyed so much as kids. This game was developed as we reminisced our youth staying home playing simple
-				video games that would give our home computers viruses. As well as playing gameboy games of shark boy and
-				lava girl on the gameboy, however these games were complicated and a lot of reading for the young mind so
-				the team wanted to make a game that was easy enough for people of all ages to play and succeed in. </p>
+	<body class="desc-logo" style="color: #fbeee0;">
+		<img class="logo" src="./img/logo.png" />
+		<h1 class="title-about"><span class="about-title-side1">ABOUT E</span><span class="about-title-side2">LEMENTO</span></h1>
+		<div class="about-container">
+		<div class="desc-about-page-div">
+			<p class="about-desc">This game is for a Web Development Final Project in which Team STRM members Randy, Meagan, 
+				Tiffany and Sabrina created a game based on a version of Fireboy and Watergirl they all played when they were
+				younger and enjoyed so much as kids. This game was developed as they reminisced their youth staying home playing 
+				simple video games that would give their home computers viruses, as well as playing gameboy games. However, some 
+				games were complicated and a lot of reading for the young mind, so the team wanted to make a game that was easy 
+				enough for people of all ages to play and succeed in.
+			</p>
 		</div>
 
 		<div class="logo-desc">
-			<img src="./img/gif/Web_Dev_Jump_Fire.gif" class="logo-img-desc">
+			<img src="./img/gif/Water_Jump_Left.gif" class="logo-img-desc">
 		</div>
 	</div>
-	<div class="">
-		<img src="./img/gif/floor.png" class="floor-img-desc">
-	</div>
 
-	<div class="about-box2"></div>
-	<section class="background first-section">
-		<p class="text-big">Contact Information</p>
-
-		<p class="text-small">
-			Here you will get to know the team members of the development team for Elemento
-		</p>
-		<br>
-		<h1 class="h-primary center" >
-			Our Team
-		</h1>
-	</section>
-
-	<section class="profile second-section">
-		<div class="about-box3"></div>
-		<div id="profiles">
-			<div class="pic">
-				<img src="./img/contactInfo/discoRandy.png" alt="picture goes here">
-
-				<p class="center">
-				<p style="text-decoration:none;
-                        font-weight:bold;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
-					Randy Batista
-				</p>
-				</p>
-				<p style="font-family: sans-serif">batistar2@wit.edu </p>
-			</div>
-			<div class="about-box4"></div>
-			<div class="pic">
-				<img src="./img/contactInfo/dogTiffany.jpg" alt="picture goes here">
-
-				<p class="center">
-				<p style="text-decoration:none;
-                        font-weight:bold;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
-					Tiffany Phan
-				</p>
-				</p>
-
-				<p style="font-family: sans-serif ">phant9@wit.edu </p>
-			</div>
-			<div class="about-box5"></div>
-			<div class="pic">
-				<img src="./img/contactInfo/dogSandwich.jpg" alt="picture goes here">
-				<br>
-				<p class="center">
-				<p style="text-decoration:none;
-                        font-weight:bold;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
-					Sabrina Ahmed
-				</p>
-				</p>
-				<p style="font-family: sans-serif ">ahmeds10@wit.edu </p>
-
-			</div>
-			<div class="about-box6"></div>
-			<div class="pic">
-				<img src="./img/contactInfo/sittingUnicorn.jpg" alt="picture goes here">
-				<br>
-				<p class="center">
-				<p style="text-decoration:none;
-                        font-weight:bold;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
-					Meagan Haradon
-				</p>
-				</p>
-				<p style="font-family: sans-serif ">haradonm@wit.edu </p>
-
-			</div>
+		<div class="floor">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
 		</div>
 
-	</section>
+		<!-- <div class="about-box2"></div> -->
+		<section class="background-first-section">
+			<h1>CONTACT INFORMATION</h1>
+			<p>Below you will get to know the team members of the development team for Elemento!</p>
+		</section>
 
-	<footer class="background">
-		<div class="about-box8"></div>
-		<p class="text-footer">
-			Copyright Â©-All rights are reserved <br /> By Wentworth Institute of Technology students: Randy Batista,
-			Tiffany Phan, Sabrina Ahmed, and Meagan Haradon
-		</p>
+		<section class="profile-second-section">
+				<div class="profile">
+					<img src="./img/contactInfo/discoRandy.png" alt="picture goes here">
 
-	</footer>
+					<p class="center">
+						<p>Randy Batista</p>
+						<p>batistar2@wit.edu </p>
+					</p>
+				</div>
 
-</body>
+					<div class="profile">
+						<img src="./img/contactInfo/dogTiffany.jpg" alt="picture goes here">
+						<p class="center">
+							<p>Tiffany Phan</p>
+							<p>phant9@wit.edu</p>
+						</p>
+					</div>
 
+					<div class="profile">
+						<img src="./img/contactInfo/dogSandwich.jpg" alt="picture goes here">
+						<p class="center">
+							<p>Sabrina Ahmed</p>
+							<p>ahmeds10@wit.edu</p>
+						</p>
+					</div>
 
+					<div class="profile">
+						<img src="./img/contactInfo/sittingUnicorn.jpg" alt="picture goes here">
+						<p class="center">
+							<p>Meagan Haradon</p>
+							<p>haradonm@wit.edu</p>
+						</p>
+					</div>
+
+		</section>
+
+		<div class="floor">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
+			<img src="./img/gif/floor.png" class="floor-img-desc">
+		</div>
+
+		<footer class="background">
+			<p class="text-footer">
+				Copyright © All Rights are Reserved
+				<br/>
+				By Wentworth Institute of Technology students: Sabrina Ahmed, Tiffany Phan, Randy Batista, and Meagan Haradon
+			</p>
+		</footer>
+	</body>
 </html>
