Game design update

--- a/Game.html
+++ b/Game.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" href="./style/homeStyles.css" />
-		<link rel="stylesheet" href="./style/homeStyles.css" />
 		<link rel="stylesheet" href="./style/navbarStyles.css" />
 		<link rel="stylesheet" href="./style/gameStyles.css" />
 		<link rel="stylesheet" href="./style/gameButton.css" />
@@ -14,81 +13,11 @@
 	</head>
 	<script></script>
 
-	<!-- <header id="navbar">
-			<nav class="navbar-container container">
-				<a href="./Home.html" class="home-link">
-					<div class="navbar-logo"><img class="logo-img" src="./img/logo.png" /></div>
-					ELEMENT
-					<img src="./img/gif/Web_Dev_Fire_Run.gif" width="30" height="45" alt="This will display an animated GIF" />
-					<div class="navbar-logo"><img class="logo-img" src="./img/logo.png" /></div>
-					ELEMENT
-					<img src="./img/gif/Web_Dev_Fire_Run.gif" width="30" height="45" alt="This will display an animated GIF" />
-				</a>
-				<div id="navbar-menu" aria-labelledby="navbar-toggle">
-					<ul class="navbar-links">
-						<li class="navbar-item">
-							<a class="navbar-link" href="./Game.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								Game</a
-							>
-						</li>
-						<li class="navbar-item">
-							<a class="navbar-link" href="./Tutorial.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								Tutorial</a
-							>
-						</li>
-						<li class="navbar-item">
-							<a class="navbar-link" href="./Contact.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								Contact</a
-							>
-						</li>
-						<li class="navbar-item">
-							<a class="navbar-link" href="./About.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								About</a
-							>
-						</li>
-						<li class="navbar-item">
-							<a class="navbar-link" href="./Game.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								Game</a
-							>
-						</li>
-						<li class="navbar-item">
-							<a class="navbar-link" href="./Tutorial.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								Tutorial</a
-							>
-						</li>
-						<li class="navbar-item">
-							<a class="navbar-link" href="./Contact.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								Contact</a
-							>
-						</li>
-						<li class="navbar-item">
-							<a class="navbar-link" href="./About.html">
-								<img src="./img/gif/Web_Dev_Heart.gif" width="20" height="20" alt="This will display an animated GIF" />
-								About</a
-							>
-						</li>
-					</ul>
-			
-	</div>
-	</nav>
-	</header> -->
 	<body class="game-screen">
-		<h1 class="gametab-title">ELEMENTO</h1>
+		<img class="logo" src="./img/logo.png" />
+		<h1 class="title-game">ELEMENTO</h1>
 
 		<canvas></canvas>
-		<!-- <script
-		src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"
-		integrity="sha512-Mf/xUqfWvDIr+1B6zfnIDIiG7XHzyP/guXUWgV6PgaQoIFeXkJQR5XWh9fqAiCiRCpemabt3naV4jhDWVnuYDQ=="
-		crossorigin="anonymous"
-		referrerpolicy="no-referrer"
-		></script> -->
 		<script src="./js/utils.js"></script>
 		<script src="./js/data/collisions.js"></script>
 		<script src="./js/classes/CollisionBlock.js"></script>
@@ -103,14 +32,8 @@
 		<script src="./js/classes/Player.js"></script>
 		<script src="./js/eventListeners.js"></script>
 		<script src="./index.js"></script>
-
-		<!-- <p>
-		Your search for treasure leads you to ancient ruins filled with
-			pure elemental energy. You feel a connection to this energy, and realize 
-			that you are able to harness it. Use the power of the four elements of nature 
-			to overcome obstacles within these ruins, and reach the treasure!
-		</p> -->
 	</body>
+
 	<footer class="game-footer">
 		<div classes="go-back-btn">
 			<button type="button" class="gameBtn2" role="button" onclick="window.location.href='./Home.html';"></button>
