Update to Feedback

--- a/Feedback.html
+++ b/Feedback.html
@@ -48,7 +48,7 @@
 
 <body>
 	<img class="logo" src="./img/logo.png" />
-		<h1 class="title-feedback"><span class="feedback-title-side1">ELEMENTO </span><span class="feedback-title-side2">FEEDBACK</span></h1>
+		<h1 class="title-feedback"><span class="feedback-title-side1">FEED</span><span class="feedback-title-side2">BACK</span></h1>
 		
 		<div class="logo-desc">
 			<img src="./img/gif/Earth_Hit_Right.gif" class="logo-img-desc">
